altered game info row height to min-height of 25px. Prevents overlap of rows when waiting games are displayed

--- a/front-end/public/css/style.css
+++ b/front-end/public/css/style.css
@@ -217,7 +217,7 @@ a:hover {
 }
 
 #game .game-info {
-  height: 25px;
+  min-height: 25px;
   line-height: 25px;
   margin-top: 5px;
 }
